06_randompod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    args:
    - sleep
    - infinity

# apt-get update
# apt-get install ping
# ping hello
# apt-get install curl
# curl http://hello:8080
